<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLoginUser" android:layout_gravity="center_horizontal" android:hint="@string/user"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etLoginPassword" android:layout_gravity="center_horizontal" android:hint="@string/password"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLoginLogin" android:layout_gravity="center_horizontal"/>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:onClick="goSignUp"
                android:id="@+id/btnLoginSignUp" android:layout_gravity="center_horizontal"
                android:layout_above="@+id/tvLoginResetPassword" android:layout_centerHorizontal="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetPassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/reset_password"
                android:id="@+id/tvLoginResetPassword" android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>